# OrkGame

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  ICD.md  LICENSE  README.md  compose.yaml  docker-compose.dev.yaml  nginx.conf  pyproject.toml
backend/: __main__.py  action.py  api.py  enemy.py  ipc.py  mcp_client.py  mcp_server.py  storage.py
ork-ork-ork/: .dockerignore  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
ork-ork-ork/src/__tests__/: api-import.test.ts  basic-api.test.js  import-test.test.tsx  minimal.test.tsx  module-resolution.test.js
ork-ork-ork/src/__tests__/api/: backend-api.test.ts  frontend-adapter.test.ts
ork-ork-ork/src/__tests__/components/: OrkBattleUI.test.tsx
ork-ork-ork/src/__tests__/integration/: game-flow.test.ts
ork-ork-ork/src/__tests__/utils/: api-utils.test.ts  class-utils.test.ts  mock-server.ts
ork-ork-ork/src/app/: globals.css  layout.tsx  page.tsx
ork-ork-ork/src/app/api/avatar/[filename]/: route.ts
ork-ork-ork/src/app/battle/: page.tsx
ork-ork-ork/src/components/: ApiLogExporter.tsx  ApiLogViewer.tsx  AvatarImage.tsx
ork-ork-ork/src/components/ork/: OrkBattleUI.tsx
ork-ork-ork/src/lib/: api.ts  avatars.ts  game.tsx  types.ts
